--- a/StudentInfoUpdate/packages.config
+++ b/StudentInfoUpdate/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="jQuery" version="3.3.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net461" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net461" />
@@ -16,20 +17,39 @@
   <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.Azure.DocumentDB" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="3.0.5" targetFramework="net461" />
   <package id="Microsoft.Azure.Storage.Blob" version="11.1.3" targetFramework="net461" />
   <package id="Microsoft.Azure.Storage.Common" version="11.1.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.4" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="5.2.2" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocols" version="5.2.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.2.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.2.2" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.0.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security.OpenIdConnect" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Rest.ClientRuntime" version="2.3.20" targetFramework="net461" />
   <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.18" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
+  <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net461" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.2.2" targetFramework="net461" />
   <package id="System.Memory" version="4.5.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Net.Http.WinHttpHandler" version="4.5.0" targetFramework="net461" />
@@ -40,6 +60,7 @@
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
   <package id="System.Threading.Thread" version="4.0.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net461" />
