--- a/StudentInfoUpdate/StudentInfoUpdate.csproj
+++ b/StudentInfoUpdate/StudentInfoUpdate.csproj
@@ -328,6 +328,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Connected Services\AzureAD\ConnectedService.json" />
+    <None Include="Properties\PublishProfiles\IISProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\studentinfoupdate2 - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\StudentInfoUpdate20200414054205 - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
